WIP deployment JAR